Translation for the :taken error message

--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -13,6 +13,7 @@ bg:
       email:
         required: Необходимо е да въведете своя имейл адрес.
         invalid: Въвели сте невалиден имейл адрес.
+        taken: Вече има потребител с този имейл адрес.
       password:
         required: Моля въведете парола от поне 8 символа.
         too_short: Паролата ви трябва да е дълга поне 8 символа.
