--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -5,8 +5,8 @@ bg:
         email: Имейл
         password: Парола
         password_confirmation: Потвърждение
-        first_name: 'Малко име'
-        last_name: 'Фамилия'
+        first_name: Малко име
+        last_name: Фамилия
 
   errors:
     attributes:
