--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -7,6 +7,7 @@ bg:
         password_confirmation: Потвърждение
         first_name: Малко име
         last_name: Фамилия
+        remember_me: Запомни ме
 
   errors:
     attributes:
